test/types/records/ferguson/choose-record/choose-record4.good
choose-record4.chpl:12: In function 'updateAndPrint':
choose-record4.chpl:14: error: cannot assign to const variable
choose-record4.chpl:15: error: cannot assign to const variable
